// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.postcss setPlugin functions 1`] = `
Object {
  "postcss-import": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-import/index.js",
    undefined,
  ],
  "postcss-nested": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-nested/index.js",
    undefined,
  ],
  "postcss-preset-env": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-preset-env/index.js",
    Object {
      "features": Object {
        "focus-within-pseudo-class": false,
      },
      "stage": 1,
    },
  ],
}
`;

exports[`bud.postcss setPluginOptions functions 1`] = `
Object {
  "postcss-import": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-import/index.js",
    Object {
      "foo": "bar",
    },
  ],
  "postcss-nested": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-nested/index.js",
    undefined,
  ],
  "postcss-preset-env": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-preset-env/index.js",
    Object {
      "features": Object {
        "focus-within-pseudo-class": false,
      },
      "stage": 1,
    },
  ],
}
`;

exports[`bud.postcss setPlugins functions 1`] = `
Object {
  "postcss-import": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-import/index.js",
    undefined,
  ],
  "postcss-nested": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-nested/index.js",
    undefined,
  ],
  "postcss-preset-env": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-preset-env/index.js",
    Object {
      "features": Object {
        "focus-within-pseudo-class": false,
      },
      "stage": 1,
    },
  ],
}
`;

exports[`bud.postcss unsetPlugin functions 1`] = `
Object {
  "postcss-nested": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-nested/index.js",
    undefined,
  ],
  "postcss-preset-env": Array [
    "/Volumes/Samsung/Code/roots/bud/node_modules/postcss-preset-env/index.js",
    Object {
      "features": Object {
        "focus-within-pseudo-class": false,
      },
      "stage": 1,
    },
  ],
}
`;
